Made patients.html

--- a/patients.html
+++ b/patients.html
@@ -40,4 +40,35 @@
             </div>
             
         </div>
+
+
+        <div id = content>
+
+            <table border="1">
+                <tr class = attribute-titles>
+                    <th>patientId</th>
+                    <th width="150px">name</th>
+                    <th width="50px">age</th>
+                    <th width="150px">phoneNumber</th>
+                    <th width="50px">esi</th>
+                    <th width="50px"></th>
+                    <th width="50px"></th>
+                </tr>
+
+                <tr class = "patient-info">
+                    <th>1</th>
+                    <td>Dylan Brehm</td>
+                    <td>21</td>
+                    <td>888-888-8888</td>
+                    <td>5</td>
+                    <th><a href = "#">edit</a></th>
+                    <th><a href = "#">delete</a></th>
+                </tr>
+
+            </table>
+
+        </div>
+
+        </div>
+
     </main>
