added to patients.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header>
 
-      <h1 class="site-title"><a href="#">Hospital Management System</a></h1>
+      <h1 class="site-title"><a href="./index.html">Hospital Management System</a></h1>
 
     </header>
 
