--- a/patients.html
+++ b/patients.html
@@ -12,7 +12,7 @@
 
     <header>
 
-      <h1 class="site-title"><a href="#">Hospital Management System</a></h1>
+      <h1 class="site-title"><a href="./index.html">Hospital Management System</a></h1>
 
     </header>
 
@@ -44,28 +44,34 @@
 
         <div id = content>
 
-            <table border="1">
-                <tr class = attribute-titles>
-                    <th>patientId</th>
-                    <th width="150px">name</th>
-                    <th width="50px">age</th>
-                    <th width="150px">phoneNumber</th>
-                    <th width="50px">esi</th>
-                    <th width="50px"></th>
-                    <th width="50px"></th>
-                </tr>
+            <div class = table>
+                <table border="1">
+                    <tr class = attribute-titles>
+                        <th>patientId</th>
+                        <th width="150px">name</th>
+                        <th width="50px">age</th>
+                        <th width="150px">phoneNumber</th>
+                        <th width="50px">esi</th>
+                        <th width="50px"></th>
+                        <th width="50px"></th>
+                    </tr>
 
-                <tr class = "patient-info">
-                    <th>1</th>
-                    <td>Dylan Brehm</td>
-                    <td>21</td>
-                    <td>888-888-8888</td>
-                    <td>5</td>
-                    <th><a href = "#">edit</a></th>
-                    <th><a href = "#">delete</a></th>
-                </tr>
+                    <tr class = "patient-info">
+                        <th>1</th>
+                        <td>Dylan Brehm</td>
+                        <td>21</td>
+                        <td>888-888-8888</td>
+                        <td>5</td>
+                        <th><a href = "#">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
 
-            </table>
+                    <tr id="add-new">
+                        <th><a href = "#">Add Patient</a></th>
+                    </tr>
+
+                </table>
+            </div>
 
         </div>
 
