--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
         <div id = menu-bar>
 
             <div class = menu-item>
-                <a href = "./patients.html">View Patients Table</a>
+                <a href = "./patients.html">View Patients</a>
             </div>
 
             <div class = menu-item>
-                <a href = "./"> View Doctors Table</a>
+                <a href = "./doctors.html"> View Doctors</a>
             </div>
 
             <div class = menu-item>
-                <a href = "./">View Treatments Table</a>
+                <a href = "./treatments.html">View Treatments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "./"> View Appointments Table</a>
+                <a href = "./appointments.html"> View Appointments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "./"> View Departments Table</a>
+                <a href = "./departments.html"> View Departments</a>
             </div>
             
         </div>
