--- a/treatments.html
+++ b/treatments.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Patients</title>
+    <title>Treatments</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 
@@ -19,7 +19,7 @@
     <main>
         <div id = menu-bar>
 
-            <div class = "menu-item selected">
+            <div class = menu-item>
                 <a href = "./patients.html">View Patients</a>
             </div>
 
@@ -27,7 +27,7 @@
                 <a href = "./doctors.html"> View Doctors</a>
             </div>
 
-            <div class = menu-item>
+            <div class = "menu-item selected">
                 <a href = "./treatments.html">View Treatments</a>
             </div>
 
@@ -47,35 +47,27 @@
             <div class = table>
                 <table border="1">
                     <tr class = attribute-titles>
-                        <th>patient_id</th>
-                        <th width="150px">first_name</th>
-                        <th width="150px">last_name</th>
-                        <th width="50px">age</th>
-                        <th width="150px">phone_number</th>
-                        <th width="50px">esi</th>
+                        <th>treatment_id</th>
+                        <th width="400px">treatment_description</th>
+                        <th width="50px">cost</th>
                         <th width="50px"></th>
                         <th width="50px"></th>
                     </tr>
 
-                    <tr class = "patient-info">
+                    <tr class = "treatment-info">
                         <th>1</th>
-                        <td>Dylan</td>
-                        <td>Brehm</td>
-                        <td>21</td>
-                        <td>888-888-8888</td>
-                        <td>5</td>
+                        <td>Take 2 advil every 4 hours</td>
+                        <td>$0.01</td>
                         <th><a href = "#">edit</a></th>
                         <th><a href = "#">delete</a></th>
                     </tr>
 
                     <tr id="add-new">
-                        <th><a href = "#">Add Patient</a></th>
+                        <th><a href = "#">Add Treatment</a></th>
                     </tr>
 
                 </table>
             </div>
-
-        </div>
 
         </div>
 
