Completed initial HTML creation

--- a/html/doctors.html
+++ b/html/doctors.html
@@ -60,12 +60,12 @@
                         <td>Dylan</td>
                         <td>Brehm</td>
                         <td>Ears, Nose, and Throat (ENT)</td>
-                        <th><a href = "#">edit</a></th>
+                        <th><a href = "./edit_doctors.html">edit</a></th>
                         <th><a href = "#">delete</a></th>
                     </tr>
 
                     <tr id="add-new">
-                        <th><a href = "#">Add Doctor</a></th>
+                        <th><a href = "./new_doctors.html">Add Doctor</a></th>
                     </tr>
 
                 </table>
