--- a/html/departments.html
+++ b/html/departments.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Appointments</title>
+    <title>Departments</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 
@@ -31,11 +31,11 @@
                 <a href = "./treatments.html">View Treatments</a>
             </div>
 
-            <div class = "menu-item selected">
+            <div class = menu-item>
                 <a href = "./appointments.html"> View Appointments</a>
             </div>
 
-            <div class = menu-item>
+            <div class = "menu-item selected">
                 <a href = "./departments.html"> View Departments</a>
             </div>
             
@@ -47,29 +47,23 @@
             <div class = table>
                 <table border="1">
                     <tr class = attribute-titles>
-                        <th>appointment_id</th>
-                        <th>patient_id</th>
-                        <th>doctor_id</th>
                         <th>department_id</th>
-                        <th width="100px">appointment_date</th>
-                        <th width="300px">reason</th>
+                        <th width="200px">name</th>
+                        <th width="300px">location</th>
                         <th width="50px"></th>
                         <th width="50px"></th>
                     </tr>
 
-                    <tr class = "appointment-info">
+                    <tr class = "department-info">
                         <th>1</th>
-                        <th>1</th>
-                        <th>1</th>
-                        <th>1</th>
-                        <td>02/14/2025</td>
-                        <td>My head hurts and I've had a runny nose for 3 weeks.</td>
-                        <th><a href = "#">edit</a></th>
+                        <td>The Beaver Clinic</td>
+                        <td>100 Beaver Lane Corvallis, OR 97330</td>
+                        <th><a href = "./edit_departments.html">edit</a></th>
                         <th><a href = "#">delete</a></th>
                     </tr>
 
                     <tr id="add-new">
-                        <th><a href = "#">Add Appointment</a></th>
+                        <th><a href = "./new_departments.html">Add Department</a></th>
                     </tr>
 
                 </table>
