Finished html without esi

--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
 
@@ -20,23 +20,31 @@
         <div id = menu-bar>
 
             <div class = menu-item>
-                <a href = "./patients.html">View Patients</a>
+                <a href = "./patients/patients.html">View Patients</a>
             </div>
 
             <div class = menu-item>
-                <a href = "./doctors.html"> View Doctors</a>
+                <a href = "./doctors/doctors.html"> View Doctors</a>
             </div>
 
             <div class = menu-item>
-                <a href = "./treatments.html">View Treatments</a>
+                <a href = "./treatments/treatments.html">View Treatments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "./appointments.html"> View Appointments</a>
+                <a href = "./appointments/appointments.html"> View Appointments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "./departments.html"> View Departments</a>
+                <a href = "./departments/departments.html"> View Departments</a>
+            </div>
+
+            <div class = menu-item>
+                <a href = "./patients_treatments/patients_treatments.html"> View Patients_Treatments</a>
+            </div>
+
+            <div class = menu-item>
+                <a href = "./doctors_departments/doctors_departments.html"> View Doctors_Departments</a>
             </div>
             
         </div>
