--- a/html/index.html
+++ b/html/index.html
@@ -60,9 +60,11 @@
                 <br />
                 <li>View Patients - Displays the Patient information useful for future communication and for scheduling their appointment with the appropriate level of urgency.</li>
                 <li>View Doctors - Displays the Doctor information useful for assigning the doctor with the correct specialization to a relevant appointment.</li>
-                <li>View Treatments - Displays the Treatment information that is given to a patient following an appointment</li>
+                <li>View Treatments - Displays the Treatment information that is given to a patient following an appointment.</li>
                 <li>View Appointments - Displays the Appointments made between Patients and Doctors and contains relevant information about the department, reason, and date it is scheduled for.</li>
                 <li>View Departments - Displays the Department information where doctors are assigned and where appointments can be located.</li>
+                <li>View Patients_Treatments - Displays the many-to-many relationship between Patients and Treatments.</li>
+                <li>View Doctors_Departments - Displays the many-to-many relationship between Doctors and Departments.</li>
             </div>
             
         </div>
