updated the patients' pages

--- a/html/index.html
+++ b/html/index.html
@@ -20,31 +20,31 @@
         <div id = menu-bar>
 
             <div class = menu-item>
-                <a href = "./patients/patients.html">View Patients</a>
+                <a href = "./patients/patients.html">Patients</a>
             </div>
 
             <div class = menu-item>
-                <a href = "./doctors/doctors.html"> View Doctors</a>
+                <a href = "./doctors/doctors.html">Doctors</a>
             </div>
 
             <div class = menu-item>
-                <a href = "./treatments/treatments.html">View Treatments</a>
+                <a href = "./treatments/treatments.html">Treatments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "./appointments/appointments.html"> View Appointments</a>
+                <a href = "./appointments/appointments.html">Appointments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "./departments/departments.html"> View Departments</a>
+                <a href = "./departments/departments.html">Departments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "./patients_treatments/patients_treatments.html"> View Patients_Treatments</a>
+                <a href = "./patients_treatments/patients_treatments.html">Patients_Treatments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "./doctors_departments/doctors_departments.html"> View Doctors_Departments</a>
+                <a href = "./doctors_departments/doctors_departments.html">Doctors_Departments</a>
             </div>
             
         </div>
@@ -58,13 +58,13 @@
                 The Hospital Management System is a comprehensive database solution designed to improve the management of hospital operations, including patients, appointments, doctors, departments, and treatments. The hospital serves an average of 500 patients daily and employs over 50 doctors across multiple departments. Hospitals face significant operational challenges without an efficient data management system, such as double-booked appointments, delays in accessing patient records, inefficient doctor scheduling, and difficulty tracking treatments.
                 <br />
                 <br />
-                <li>View Patients - Displays the Patient information useful for future communication and for scheduling their appointment with the appropriate level of urgency.</li>
-                <li>View Doctors - Displays the Doctor information useful for assigning the doctor with the correct specialization to a relevant appointment.</li>
-                <li>View Treatments - Displays the Treatment information that is given to a patient following an appointment.</li>
-                <li>View Appointments - Displays the Appointments made between Patients and Doctors and contains relevant information about the department, reason, and date it is scheduled for.</li>
-                <li>View Departments - Displays the Department information where doctors are assigned and where appointments can be located.</li>
-                <li>View Patients_Treatments - Displays the many-to-many relationship between Patients and Treatments.</li>
-                <li>View Doctors_Departments - Displays the many-to-many relationship between Doctors and Departments.</li>
+                <li>Patients - Displays the Patient information useful for future communication and for scheduling their appointment with the appropriate level of urgency.</li>
+                <li>Doctors - Displays the Doctor information useful for assigning the doctor with the correct specialization to a relevant appointment.</li>
+                <li>Treatments - Displays the Treatment information that is given to a patient following an appointment.</li>
+                <li>Appointments - Displays the Appointments made between Patients and Doctors and contains relevant information about the department, reason, and date it is scheduled for.</li>
+                <li>Departments - Displays the Department information where doctors are assigned and where appointments can be located.</li>
+                <li>Patients_Treatments - Displays the many-to-many relationship between Patients and Treatments.</li>
+                <li>Doctors_Departments - Displays the many-to-many relationship between Doctors and Departments.</li>
             </div>
             
         </div>
