--- a/html/departments/edit_departments.html
+++ b/html/departments/edit_departments.html
@@ -22,31 +22,31 @@
         <div id = menu-bar>
 
             <div class = "menu-item">
-                <a href = "../patients/patients.html">View Patients</a>
+                <a href = "../patients/patients.html">Patients</a>
             </div>
 
             <div class = "menu-item">
-                <a href = "../doctors/doctors.html"> View Doctors</a>
+                <a href = "../doctors/doctors.html">Doctors</a>
             </div>
 
             <div class = menu-item>
-                <a href = "../treatments/treatments.html">View Treatments</a>
+                <a href = "../treatments/treatments.html">Treatments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "../appointments/appointments.html"> View Appointments</a>
+                <a href = "../appointments/appointments.html">Appointments</a>
             </div>
 
             <div class = "menu-item selected">
-                <a href = "../departments/departments.html"> View Departments</a>
+                <a href = "../departments/departments.html">Departments</a>
             </div>
             
             <div class = "menu-item">
-                <a href = "../patients_treatments/patients_treatments.html"> View Patients_Treatments</a>
+                <a href = "../patients_treatments/patients_treatments.html">Patients_Treatments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "../doctors_departments/doctors_departments.html"> View Doctors_Departments</a>
+                <a href = "../doctors_departments/doctors_departments.html">Doctors_Departments</a>
             </div>
 
         </div>
@@ -61,12 +61,12 @@
             <div id = input-table>
                 <table>
                     <tr class = attribute-titles>
-                        <th width="50%">*name</th>
-                        <th width="50%">*location</th>
+                        <th width="50%">*Name</th>
+                        <th width="50%">*Location</th>
                     </tr>
 
                     <tr class = "Departments-info">
-                        <td><input id = patient_id class="input-attribute" value = "The Beaver Clinic"></td>
+                        <td><input id = patient_id class="input-attribute" value = "Beaver Clinic"></td>
                         <td><input id = treatment_id class="input-attribute" value = "1800 Beaver Lane Corvallis, OR 97330"></td>
                     </tr>
 
