--- a/html/patients/edit_patients.html
+++ b/html/patients/edit_patients.html
@@ -73,7 +73,7 @@
                         <td><input id = last_name class="input-attribute" value = "Brehm"></td>
                         <td><input id = age class="input-attribute" value = "21"></td>
                         <td><input id = phone_number class="input-attribute" value = "888-888-8888"></td>
-                        <td><select id = esi_id class="input-attribute">
+                        <td><select id = esi_desc class="input-attribute">
                             <option value = "none" selected></option>
                             <option value = "1">1 - Critical</option>
                             <option value = "2">2 - Severe</option>
