--- a/html/patients/new_patients.html
+++ b/html/patients/new_patients.html
@@ -73,7 +73,7 @@
                         <td><input id = last_name class="input-attribute"></td>
                         <td><input id = age class="input-attribute"></td>
                         <td><input id = phone_number class="input-attribute"></td>
-                        <td><select id = esi_id class="input-attribute">
+                        <td><select id = esi_desc class="input-attribute">
                             <option value = "none" selected></option>
                             <option value = "1">1 - Critical</option>
                             <option value = "2">2 - Severe</option>
