--- a/html/appointments/appointments.html
+++ b/html/appointments/appointments.html
@@ -21,31 +21,31 @@
         <div id = menu-bar>
 
             <div class = "menu-item">
-                <a href = "../patients/patients.html">View Patients</a>
+                <a href = "../patients/patients.html">Patients</a>
             </div>
 
             <div class = "menu-item">
-                <a href = "../doctors/doctors.html"> View Doctors</a>
+                <a href = "../doctors/doctors.html">Doctors</a>
             </div>
 
             <div class = menu-item>
-                <a href = "../treatments/treatments.html">View Treatments</a>
+                <a href = "../treatments/treatments.html">Treatments</a>
             </div>
 
             <div class = "menu-item selected">
-                <a href = "../appointments/appointments.html"> View Appointments</a>
+                <a href = "../appointments/appointments.html">Appointments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "../departments/departments.html"> View Departments</a>
+                <a href = "../departments/departments.html">Departments</a>
             </div>
             
             <div class = "menu-item">
-                <a href = "../patients_treatments/patients_treatments.html"> View Patients_Treatments</a>
+                <a href = "../patients_treatments/patients_treatments.html">Patients_Treatments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "../doctors_departments/doctors_departments.html"> View Doctors_Departments</a>
+                <a href = "../doctors_departments/doctors_departments.html">Doctors_Departments</a>
             </div>
 
         </div>
@@ -54,6 +54,13 @@
         <div id = content>
 
             <div id = search-bar>
+                <select name = "filter-attributes" id = "filter-attributes">
+                    <option value="patient_name">Patient's Name</option>
+                    <option value="doctor_name">Doctor's Name</option>
+                    <option value="department_name">Department Name</option>
+                    <option value="date">Date</option>
+                    <option value="reason">Reason</option>
+                </select>
                 <input id = search_entry>
                 <a href = "#">Filter</a>
             </div>
@@ -62,20 +69,20 @@
                 <table>
                     <tr class = attribute-titles>
                         <th width="10%">appointments_id</th>
-                        <th width="10%">patient_id</th>
-                        <th width="10%">doctor_id</th>
-                        <th width="10%">department_id</th>
-                        <th width="20%">appointment_date</th>
-                        <th width="20%">reason</th>
+                        <th width="10%">Patient Name</th>
+                        <th width="10%">Doctor Name</th>
+                        <th width="15%">Department Name</th>
+                        <th width="15%">Date</th>
+                        <th width="20%">Reason</th>
                         <th width="10%"></th>
                         <th width="10%"></th>
                     </tr>
 
                     <tr class = "Appointments-info">
                         <th>1</th>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>1</td>
+                        <td>Dylan Brehm</td>
+                        <td>Dylan Brehm</td>
+                        <td>Beaver Clinic</td>
                         <td>02/14/2025</td>
                         <td>Ongoing sore throat and sick roommates.</td>
                         <th><a href = "./edit_appointments.html">edit</a></th>
