--- a/html/departments/departments.html
+++ b/html/departments/departments.html
@@ -21,31 +21,31 @@
         <div id = menu-bar>
 
             <div class = "menu-item">
-                <a href = "../patients/patients.html">View Patients</a>
+                <a href = "../patients/patients.html">Patients</a>
             </div>
 
             <div class = "menu-item">
-                <a href = "../doctors/doctors.html"> View Doctors</a>
+                <a href = "../doctors/doctors.html">Doctors</a>
             </div>
 
             <div class = menu-item>
-                <a href = "../treatments/treatments.html">View Treatments</a>
+                <a href = "../treatments/treatments.html">Treatments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "../appointments/appointments.html"> View Appointments</a>
+                <a href = "../appointments/appointments.html">Appointments</a>
             </div>
 
             <div class = "menu-item selected">
-                <a href = "../departments/departments.html"> View Departments</a>
+                <a href = "../departments/departments.html">Departments</a>
             </div>
             
             <div class = "menu-item">
-                <a href = "../patients_treatments/patients_treatments.html"> View Patients_Treatments</a>
+                <a href = "../patients_treatments/patients_treatments.html">Patients_Treatments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "../doctors_departments/doctors_departments.html"> View Doctors_Departments</a>
+                <a href = "../doctors_departments/doctors_departments.html">Doctors_Departments</a>
             </div>
 
         </div>
@@ -54,6 +54,10 @@
         <div id = content>
 
             <div id = search-bar>
+                <select name = "filter-attributes" id = "filter-attributes">
+                    <option value="name">Name</option>
+                    <option value="location">Location</option>
+                </select>
                 <input id = search_entry>
                 <a href = "#">Filter</a>
             </div>
@@ -61,16 +65,16 @@
             <div id = display-table>
                 <table>
                     <tr class = attribute-titles>
-                        <th width="10%">department_id</th>
+                        <th width="5%">ID</th>
                         <th width="35%">name</th>
-                        <th width="35%">location</th>
+                        <th width="40%">location</th>
                         <th width="10%"></th>
                         <th width="10%"></th>
                     </tr>
 
                     <tr class = "Departments-info">
                         <th>1</th>
-                        <td>The Beaver Clinic</td>
+                        <td>Beaver Clinic</td>
                         <td>1800 Beaver Lane Corvallis, OR 97330</td>
                         <th><a href = "./edit_departments.html">edit</a></th>
                         <th><a href = "#">delete</a></th>
