--- a/html/doctors_departments/new_doctors_departments.html
+++ b/html/doctors_departments/new_doctors_departments.html
@@ -22,31 +22,31 @@
         <div id = menu-bar>
 
             <div class = menu-item>
-                <a href = "../patients/patients.html">View Patients</a>
+                <a href = "../patients/patients.html">Patients</a>
             </div>
 
             <div class = "menu-item">
-                <a href = "../doctors/doctors.html"> View Doctors</a>
+                <a href = "../doctors/doctors.html">Doctors</a>
             </div>
 
             <div class = menu-item>
-                <a href = "../treatments/treatments.html">View Treatments</a>
+                <a href = "../treatments/treatments.html">Treatments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "../appointments/appointments.html"> View Appointments</a>
+                <a href = "../appointments/appointments.html">Appointments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "../departments/departments.html"> View Departments</a>
+                <a href = "../departments/departments.html">Departments</a>
             </div>
             
             <div class = "menu-item">
-                <a href = "../patients_treatments/patients_treatments.html"> View Patients_Treatments</a>
+                <a href = "../patients_treatments/patients_treatments.html">Patients_Treatments</a>
             </div>
 
             <div class = "menu-item selected">
-                <a href = "../doctors_departments/doctors_departments.html"> View Doctors_Departments</a>
+                <a href = "../doctors_departments/doctors_departments.html">Doctors_Departments</a>
             </div>
 
         </div>
@@ -61,13 +61,19 @@
             <div id = input-table>
                 <table>
                     <tr class = attribute-titles>
-                        <th width="50%">*doctor_id</th>
-                        <th width="50%">*department_id</th>
+                        <th width="50%">*Doctor Name</th>
+                        <th width="50%">*Department Name</th>
                     </tr>
 
                     <tr class = "Doctors_Departments-info">
-                        <td><input id = doctor_id class="input-attribute"></th>
-                        <td><input id = department_id class="input-attribute"></th>
+                        <td><select id = doctor_name class="input-attribute">
+                            <option value = empty></option>
+                            <option value = "1">Dylan Brehm</option>
+                        </select></td>
+                        <td><select id = department_name class="input-attribute">
+                            <option value = empty></option>
+                            <option value = "1">Beaver Clinic</option>
+                        </select></td>
                     </tr>
 
                 </table>
