--- a/html/patients_treatments/edit_patients_treatments.html
+++ b/html/patients_treatments/edit_patients_treatments.html
@@ -22,31 +22,31 @@
         <div id = menu-bar>
 
             <div class = menu-item>
-                <a href = "../patients/patients.html">View Patients</a>
+                <a href = "../patients/patients.html">Patients</a>
             </div>
 
             <div class = "menu-item">
-                <a href = "../doctors/doctors.html"> View Doctors</a>
+                <a href = "../doctors/doctors.html">Doctors</a>
             </div>
 
             <div class = menu-item>
-                <a href = "../treatments/treatments.html">View Treatments</a>
+                <a href = "../treatments/treatments.html">Treatments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "../appointments/appointments.html"> View Appointments</a>
+                <a href = "../appointments/appointments.html">Appointments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "../departments/departments.html"> View Departments</a>
+                <a href = "../departments/departments.html">Departments</a>
             </div>
             
             <div class = "menu-item selected">
-                <a href = "../patients_treatments/patients_treatments.html"> View Patients_Treatments</a>
+                <a href = "../patients_treatments/patients_treatments.html">Patients_Treatments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "../doctors_departments/doctors_departments.html"> View Doctors_Departments</a>
+                <a href = "../doctors_departments/doctors_departments.html">Doctors_Departments</a>
             </div>
 
         </div>
@@ -61,13 +61,19 @@
             <div id = input-table>
                 <table>
                     <tr class = attribute-titles>
-                        <th width="50%">*patient_id</th>
-                        <th width="50%">*treatment_id</th>
+                        <th width="50%">*Patient Name</th>
+                        <th width="50%">*Treatment Description</th>
                     </tr>
 
                     <tr class = "Patients_Treatments-info">
-                        <td><input id = patient_id class="input-attribute" value = "1"></th>
-                        <td><input id = treatment_id class="input-attribute" value = "1"></th>
+                        <td><select id = patient_name class="input-attribute">
+                            <option value = empty></option>
+                            <option value = 1 selected>Dylan Brehm</option>
+                        </select></td>
+                        <td><select id = treatment_desc class="input-attribute">
+                            <option value = empty></option>
+                            <option value = 1 selected>Take 2 advil every 4 hours.</option>
+                        </select></td>
                     </tr>
 
                 </table>
