--- a/html/patients_treatments/patients_treatments.html
+++ b/html/patients_treatments/patients_treatments.html
@@ -21,11 +21,11 @@
         <div id = menu-bar>
 
             <div class = menu-item>
-                <a href = "../patients/patients.html">View Patients</a>
+                <a href = "../patients/patients.html">Patients</a>
             </div>
 
             <div class = "menu-item">
-                <a href = "../doctors/doctors.html"> View Doctors</a>
+                <a href = "../doctors/doctors.html">Doctors</a>
             </div>
 
             <div class = menu-item>
@@ -33,19 +33,19 @@
             </div>
 
             <div class = menu-item>
-                <a href = "../appointments/appointments.html"> View Appointments</a>
+                <a href = "../appointments/appointments.html">Appointments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "../departments/departments.html"> View Departments</a>
+                <a href = "../departments/departments.html">Departments</a>
             </div>
             
             <div class = "menu-item selected">
-                <a href = "../patients_treatments/patients_treatments.html"> View Patients_Treatments</a>
+                <a href = "../patients_treatments/patients_treatments.html">Patients_Treatments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "../doctors_departments/doctors_departments.html"> View Doctors_Departments</a>
+                <a href = "../doctors_departments/doctors_departments.html">Doctors_Departments</a>
             </div>
 
         </div>
@@ -54,6 +54,10 @@
         <div id = content>
 
             <div id = search-bar>
+                <select name = "filter-attributes" id = "filter-attributes">
+                    <option value="first_name">Patient's Name</option>
+                    <option value="last_name">Treatment Description</option>
+                </select>
                 <input id = search_entry>
                 <a href = "#">Filter</a>
             </div>
@@ -61,17 +65,17 @@
             <div id = display-table>
                 <table>
                     <tr class = attribute-titles>
-                        <th width="30%">patients_treatments_id</th>
-                        <th width="25%">patient_id</th>
-                        <th width="25%">treatment_id</th>
+                        <th width="5%">ID</th>
+                        <th width="35%">Patient Name</th>
+                        <th width="40%">Treatment Description</th>
                         <th width="10%"></th>
                         <th width="10%"></th>
                     </tr>
 
                     <tr class = "Patients_Treatments-info">
                         <th>1</th>
-                        <td>1</td>
-                        <td>1</td>
+                        <td>Dylan Brehm</td>
+                        <td>Take 2 advil every 4 hours.</td>
                         <th><a href = "./edit_patients_treatments.html">edit</a></th>
                         <th><a href = "#">delete</a></th>
                     </tr>
