--- a/html/treatments/treatments.html
+++ b/html/treatments/treatments.html
@@ -21,31 +21,31 @@
         <div id = menu-bar>
 
             <div class = "menu-item">
-                <a href = "../patients/patients.html">View Patients</a>
+                <a href = "../patients/patients.html">Patients</a>
             </div>
 
             <div class = "menu-item">
-                <a href = "../doctors/doctors.html"> View Doctors</a>
+                <a href = "../doctors/doctors.html">Doctors</a>
             </div>
 
             <div class = "menu-item selected">
-                <a href = "../treatments/treatments.html">View Treatments</a>
+                <a href = "../treatments/treatments.html">Treatments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "../appointments/appointments.html"> View Appointments</a>
+                <a href = "../appointments/appointments.html">Appointments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "../departments/departments.html"> View Departments</a>
+                <a href = "../departments/departments.html">Departments</a>
             </div>
             
             <div class = "menu-item">
-                <a href = "../patients_treatments/patients_treatments.html"> View Patients_Treatments</a>
+                <a href = "../patients_treatments/patients_treatments.html">Patients_Treatments</a>
             </div>
 
             <div class = menu-item>
-                <a href = "../doctors_departments/doctors_departments.html"> View Doctors_Departments</a>
+                <a href = "../doctors_departments/doctors_departments.html">Doctors_Departments</a>
             </div>
 
         </div>
@@ -54,6 +54,11 @@
         <div id = content>
 
             <div id = search-bar>
+                <select name = "filter-attributes" id = "filter-attributes">
+                    <option value="treatment_desc">Treatment Description</option>
+                    <option value="min-cost">Minimum Cost</option>
+                    <option value="max-cost">Maximum Cost</option>
+                </select>
                 <input id = search_entry>
                 <a href = "#">Filter</a>
             </div>
@@ -61,9 +66,9 @@
             <div id = display-table>
                 <table>
                     <tr class = attribute-titles>
-                        <th width="10%">treatments_id</th>
-                        <th width="35%">treatment_description</th>
-                        <th width="35%">cost</th>
+                        <th width="5%">ID</th>
+                        <th width="40%">Description</th>
+                        <th width="35%">Cost</th>
                         <th width="10%"></th>
                         <th width="10%"></th>
                     </tr>
