Added sample data to patients

--- a/html/patients/edit_patients.html
+++ b/html/patients/edit_patients.html
@@ -69,14 +69,14 @@
                     </tr>
 
                     <tr class = "Patients-info">
-                        <td><input id = first_name class="input-attribute" value = "Dylan"></td>
-                        <td><input id = last_name class="input-attribute" value = "Brehm"></td>
-                        <td><input id = age class="input-attribute" value = "21"></td>
-                        <td><input id = phone_number class="input-attribute" value = "888-888-8888"></td>
+                        <td><input id = first_name class="input-attribute" value = "Alice"></td>
+                        <td><input id = last_name class="input-attribute" value = "Smith"></td>
+                        <td><input id = age class="input-attribute" value = "45"></td>
+                        <td><input id = phone_number class="input-attribute" value = "555-1234"></td>
                         <td><select id = esi_desc class="input-attribute">
-                            <option value = "none" selected></option>
+                            <option value = "none"></option>
                             <option value = "1">1 - Critical</option>
-                            <option value = "2">2 - Severe</option>
+                            <option value = "2" selected>2 - Severe</option>
                             <option value = "3">3 - Moderate</option>
                             <option value = "4">4 - Mild</option>
                             <option value = "5">5 - Non-Urgent</option>
