--- a/html/patients/patients.html
+++ b/html/patients/patients.html
@@ -80,12 +80,56 @@
 
                     <tr class = "Patients-info">
                         <th>1</th>
-                        <td>Dylan</td>
-                        <td>Brehm</td>
-                        <td>21</td>
-                        <td>888-888-8888</td>
-                        <td>NULL</td>
-                        <th><a href = "./edit_patients.html">edit</a></th>
+                        <td>Alice</td>
+                        <td>Smith</td>
+                        <td>45</td>
+                        <td>555-1234</td>
+                        <td>2 - Severe</td>
+                        <th><a href = "./edit_patients.html#1">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Patients-info">
+                        <th>2</th>
+                        <td>John Doe</td>
+                        <td>Smith</td>
+                        <td>30</td>
+                        <td>555-5678</td>
+                        <td>3 - Moderate</td>
+                        <th><a href = "./edit_patients.html#2">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Patients-info">
+                        <th>3</th>
+                        <td>Maria</td>
+                        <td>Lopez</td>
+                        <td>67</td>
+                        <td>555-9012</td>
+                        <td>1 - Critical</td>
+                        <th><a href = "./edit_patients.html#3">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Patients-info">
+                        <th>4</th>
+                        <td>David</td>
+                        <td>Kim</td>
+                        <td>52</td>
+                        <td>555-3456</td>
+                        <td>4 - Mild</td>
+                        <th><a href = "./edit_patients.html#4">edit</a></th>
+                        <th><a href = "#">delete</a></th>
+                    </tr>
+
+                    <tr class = "Patients-info">
+                        <th>5</th>
+                        <td>Emily</td>
+                        <td>Zhang</td>
+                        <td>26</td>
+                        <td>555-7890</td>
+                        <td>2 - Severe</td>
+                        <th><a href = "./edit_patients.html#5">edit</a></th>
                         <th><a href = "#">delete</a></th>
                     </tr>
 
